# everydoor-plugin-repo

./: MANIFEST.in  README.md  pyproject.toml
app/: __init__.py  api.py  auth.py  countries.json  database.py  plugins.py
app/templates/: base.html  delete.html  edit_plugin.html  edit_version.html  install.html  plugin.html  plugins.html  upload.html
app/well-known/: apple-app-site-association
migrations/versions/: 02defd0699aa_initial.py
